traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:1: error: Missing closing brace `}' assumed here
var x:Int = 0;
^TraversalDiagonal:1: error: expected class or object definition
var x:Int = 0;
^TraversalDiagonal:2: error: expected class or object definition
var y:Int = 0;
^TraversalDiagonal:3: error: expected class or object definition
var count:Int = 0
^TraversalDiagonal:5: error: expected start of definition
override def run() {
         ^TraversalDiagonal:12: error: expected class or object definition
def avancer(){
^